# workspace-template

./: .gitignore  Cargo.toml  LICENSE  NOTICE  clippy.toml  rust-toolchain.toml  rustfmt.toml
