[workspace]
resolver = "3"
members = []

[workspace.package]
version = "0.1.0"
rust-version = "1.90.0"
edition = "2024"
authors = [""]
license = "ISC"
repository = ""

[workspace.dependencies]

[workspace.lints.rust]
# unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "deny"
non_snake_case = "warn"
missing_panic_docs = "forbid"
undocumented_unsafe_blocks = "forbid"
redudant_clone = "warn"
unreachable_pub = "warn"
missing_debug_implementation = "warn"

[workspace.lints.clippy]
pedantic = "warn"
module_name_repetitions = "allow"
wildcard_imports = "forbid"
cargo_common_metadata = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "warn"
invalid_html_tags = "warn"
