[workspace]
resolver = "3"
members = []

[workspace.package]
description = ""
version = "0.1.0"
rust-version = "1.90.0"
edition = "2024"
authors = [""]
license = "ISC"
readme = "README.md"
repository = ""
keywords = []
categories = []

[workspace.dependencies]

[workspace.lints.rust]
# unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "deny"
non_snake_case = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
wildcard_imports = "deny"
undocumented_unsafe_blocks = "forbid"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "warn"
invalid_html_tags = "warn"
